<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_slideshow"
            android:menuCategory="secondary"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_farm"
            android:icon="@drawable/ic_menu_slideshow"
            android:menuCategory="secondary"
            android:title="@string/menu_farm" />
        <item
            android:id="@+id/nav_vegetables"
            android:icon="@drawable/ic_menu_slideshow"
            android:menuCategory="secondary"
            android:title="@string/menu_vegetable" />
        <item
            android:id="@+id/nav_visits"
            android:icon="@drawable/ic_menu_slideshow"
            android:menuCategory="secondary"
            android:title="@string/menu_visit" />

        <item
            android:id="@+id/nav_sacks"
            android:icon="@drawable/ic_menu_slideshow"
            android:menuCategory="secondary"
            android:title="@string/menu_sack" />
    </group>
</menu>