<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_padding"
            android:text="@string/name_label"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/show_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_padding"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_vegetable"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/adress_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_padding"
            android:text="@string/adress_label"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/show_adress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_padding"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_adress"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/area_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_padding"
            android:text="@string/area_label"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/show_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_padding"
            android:hint="@string/hint_number"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/location_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_padding"
            android:text="@string/location_label"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/show_longitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_padding"
            android:text="-34.903593340951694"
            android:textSize="18sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/show_latitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_padding"
            android:text="-57.93768281048274"
            android:textSize="18sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/button_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FAFAFA"
            android:text="Ver en mapa"
            android:textColor="#808080"></Button>

        <TextView
            android:id="@+id/plot_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_padding"
            android:text="@string/plot_label"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="8dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/main_list_item" />

        <Button
            android:id="@+id/button_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_padding"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/button_edit"
            android:textColor="@color/buttonLabel" />

        <Button
            android:id="@+id/button_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_padding"
            android:backgroundTint="#DB402C"
            android:text="@string/button_delete"
            android:textColor="@color/buttonLabel" />

    </LinearLayout>
</ScrollView>




