<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_padding"
        android:text="@string/name_label"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_padding"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_plot"
        android:inputType="textAutoComplete"
        android:minHeight="@dimen/min_height"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/description_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_padding"
        android:text="@string/description_label"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edit_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_padding"
        android:fontFamily="sans-serif-light"
        android:hint="@string/description_hint"
        android:inputType="textAutoComplete"
        android:minHeight="@dimen/min_height"
        android:textSize="18sp" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/isCovered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_padding"
        android:minHeight="48dp"
        android:text="¿Está cubierta?"
        android:textSize="20sp"
        android:textColor="@color/gray"/>

    <TextView
        android:id="@+id/agroecologicArea_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_padding"
        android:text="Superficie"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edit_agroecologicArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_padding"
        android:hint="@string/hint_number"
        android:inputType="numberDecimal"
        android:minHeight="@dimen/min_height"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/row_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_padding"
        android:text="Filas"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edit_rows"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_padding"
        android:hint="@string/hint_number"
        android:inputType="numberDecimal"
        android:minHeight="@dimen/min_height"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewVegetables"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:clickable="true"
        android:drawablePadding="16dp"
        android:focusable="true"
        android:hint="@string/crops"
        android:padding="12dp"
        android:textSize="18sp"
        app:drawableRightCompat="@android:drawable/arrow_down_float" />


</LinearLayout>