<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_padding"
            android:text="@string/name_label"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/show_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_padding"
            android:fontFamily="sans-serif-light"
            android:text="@string/name_label"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/description_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_padding"
            android:text="@string/description_label"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/show_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_padding"
            android:fontFamily="sans-serif-light"
            android:text="@string/description_label"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/harvest_month_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_padding"
            android:text="@string/harvest_month_label"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/show_harvest_month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_padding"
            android:fontFamily="sans-serif-light"
            android:text="@string/harvest_month_label"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/sowing_month_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_padding"
            android:text="@string/sowing_month_label"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/show_sowing_month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_padding"
            android:fontFamily="sans-serif-light"
            android:text="@string/sowing_month_label"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_padding"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/button_edit"
            android:textColor="@color/buttonLabel" />

        <Button
            android:id="@+id/button_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_padding"
            android:backgroundTint="#DB402C"
            android:text="@string/button_delete"
            android:textColor="@color/buttonLabel" />

    </LinearLayout>
</ScrollView>




